--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
   <a href="/">Home</a>
   <form method="get" action="/search" class="search-form">
-    <input name="q" type="search" placeholder="search" value="<%= query %>" />
+    <input name="q" type="search" placeholder="search" value="<%= query %>" autofocus/>
     <input type="submit" style="display: none" />
   </form>
 </nav>
