--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,16 @@ html, body{
   padding: 0;
   width: 100vw;
   background-color: darkgrey;
+  font-size: 16px;
+}
+
+html,
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: monospace;
 }
 
 
