--- a/public/style.css
+++ b/public/style.css
@@ -106,3 +106,18 @@ nav .search-form input {
 .contact-show-details > dd {
   margin-left: 0.25em;
 }
+
+
+.new-contact-form label {
+  display: block;
+  margin-bottom: 1em;
+}
+
+.new-contact-form label > span {
+  display: inline-block;
+  min-width: 8em;
+}
+
+.new-contact-form input[type="submit"] {
+  margin-top: 1em;
+}
