--- a/views/not_found.ejs
+++ b/views/not_found.ejs
@@ -1,7 +1,13 @@
-<%- include header.ejs %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Contacts</title>
+</head>
+<body>
 
   <h1>Page Not Found</h1>
 
   <h3>Sorry, the page you have requested was not found :/</h3>
 
-<%- include footer.ejs %>
+</body>
+</html>
