added bootstrap styles

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="/style.css">
     <script type="text/javascript" src="/script.js"></script>
   </head>
-  <body>
-    <div class="page-column">
+  <body class="container">
+    <div class="col-sm-8 col-sm-offset-2">
       <%- include nav.ejs %>
-      <div class="page-column-content">
