--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,12 +1,9 @@
 <%- include header.ejs %>
 
-    <div class="contact-show-page-controls">
-      <a class="delete-contact" href="/contacts/<%= contact.id %>/delete">delete</a>
-    </div>
-
     <h1><%= contact.first_name %>&nbsp;<%= contact.last_name %></h1>
+    <a class="btn btn-danger pull-right" href="/contacts/<%= contact.id %>/delete">delete</a>
 
-    <dl class="contact-show-details">
+    <dl>
       <dt>First name</dt>
       <dd><%= contact.first_name %></dd>
       <dt>Last name</dt>
