--- a/public/style.css
+++ b/public/style.css
@@ -1,86 +1,1 @@
-html, body{
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  background-color: darkgrey;
-}
-
-
-nav {
-  background-color: black;
-  color: white;
-  padding: 0.3em 0.5em;
-}
-
-nav a {
-  text-decoration: none;
-  color: inherit;
-}
-
-nav .search-form {
-  display: inline-block;
-}
-
-nav .search-form input {
-  border-radius: 5px;
-  border: none;
-  padding: 0.3em 0.5em;
-}
-
-
-.page-column {
-  width: 700px;
-  margin: 0 auto;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  background-color: white;
-  min-height: 100vh;
-}
-
-.page-column-content{
-  padding: 1em;
-}
-
-.contact-list{
-  display: flex;
-  flex-direction: column;
-}
-
-.contact-list-member{
-  display: flex;
-  flex-direction: row;
-  padding: 0.2em 0.3em;
-}
-.contact-list-member:hover{
-  background-color: lightgrey;
-}
-
-.contact-list-member a{
-  text-decoration: none;
-}
-.contact-list-member a:hover{
-  text-decoration: underline;
-}
-
-.contact-list-member .contact-link{
-  flex: 1 1 auto;
-
-}
-
-.contact-list-member .delete-contact{
-
-}
-
-.contact-show-page-controls{
-  text-align: right;
-}
-
-.contact-show-details > dt {
-  text-decoration: underline;
-  font-weight: bold;
-  margin: 0.25em 0;
-}
-
-.contact-show-details > dd {
-  margin-left: 0.25em;
-}
+/*Custom styles here*/
